feature(scanning): Apply Google java format to codebase (#11793)